--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,8 @@ on:
     branches: main
     paths: 
       - "*.qmd"
+      - "*.ipynb"
       - custom.scss
-      - renv.lock
       - _quarto.yml
       - .github/workflows/publish.yml
   # every week on sunday
