--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   execute-dir: project
   render:
     - "*.qmd"
+    - "*.ipynb"
     - "!CONTRIBUTIONG.md"
     - "!LICENSE.md"
 
@@ -20,12 +21,15 @@ website:
         text: Pre-course preparations
       - href: course_schedule.qmd
         text: Course schedule
+      - href: quality_control.ipynb
+        text: Quality control
       - text: "Course material"
         menu:
-          - href: "quality_control.qmd"
+          - href: ipynb/Quality_Control_D1B2_Controls.ipynb
             text: Quality control
-          - href: "normalization_scaling.qmd"
+          - href: ipynb/Normalization_And_Scaling_D1B3_Controls.ipynb
             text: Normalization and scaling
+            
     right:
       - icon: github
         href: https://github.com/sib-swiss/single-cell-python-training/
