--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,7 +21,7 @@ website:
       - text: "day 1"
         menu:
           - href: "ipynb/day1-1_setup.ipynb"
-          - href: "ipynb/day1-1a_cellranger.ipynb"
+          - href: "ipynb/day1-1_cellranger.ipynb"
           - href: "ipynb/day1-2_analysis_tools_qc.ipynb"
           - href: "ipynb/day1-3_normalization_scaling.ipynb"
       - text: "day 2"
