--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,264 @@
-scanpy
-pandas
-numpy
-matplotlib
-seaborn
-scvelo
-jupyter
-jupyter-cache
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+aiohttp=3.9.5=pypi_0
+aiosignal=1.3.1=pypi_0
+anndata=0.9.2=pypi_0
+annoy=1.17.3=pypi_0
+anyio=4.1.0=pypi_0
+arboreto=0.1.6=pypi_0
+argon2-cffi=23.1.0=pypi_0
+argon2-cffi-bindings=21.2.0=pypi_0
+arrow=1.3.0=pypi_0
+asttokens=2.4.1=pypi_0
+async-lru=2.0.4=pypi_0
+async-timeout=4.0.3=pypi_0
+attrs=23.1.0=pypi_0
+babel=2.14.0=pypi_0
+backcall=0.2.0=pypi_0
+backports-zoneinfo=0.2.1=pypi_0
+beautifulsoup4=4.12.2=pypi_0
+bleach=6.1.0=pypi_0
+bokeh=3.1.1=pypi_0
+boltons=24.0.0=pypi_0
+bzip2=1.0.8=h7f98852_4
+ca-certificates=2022.9.24=ha878542_0
+celltypist=1.6.2=pypi_0
+certifi=2023.11.17=pypi_0
+cffi=1.16.0=pypi_0
+cfgv=3.4.0=pypi_0
+charset-normalizer=3.3.2=pypi_0
+click=8.1.7=pypi_0
+cloudpickle=3.0.0=pypi_0
+cmcrameri=1.9=pypi_0
+comm=0.2.0=pypi_0
+contourpy=1.1.1=pypi_0
+cryptography=41.0.7=pypi_0
+ctxcore=0.2.0=pypi_0
+cycler=0.12.1=pypi_0
+cython=3.0.10=pypi_0
+cytoolz=0.12.3=pypi_0
+dask=2023.5.0=pypi_0
+debugpy=1.8.0=pypi_0
+decorator=5.1.1=pypi_0
+defusedxml=0.7.1=pypi_0
+dill=0.3.8=pypi_0
+distlib=0.3.8=pypi_0
+distributed=2023.5.0=pypi_0
+docrep=0.3.2=pypi_0
+docutils=0.20.1=pypi_0
+doubletdetection=4.2=pypi_0
+et-xmlfile=1.1.0=pypi_0
+exceptiongroup=1.2.0=pypi_0
+executing=2.0.1=pypi_0
+fastjsonschema=2.19.0=pypi_0
+filelock=3.13.1=pypi_0
+fonttools=4.46.0=pypi_0
+fqdn=1.5.1=pypi_0
+frozendict=2.4.4=pypi_0
+frozenlist=1.4.1=pypi_0
+fsspec=2023.12.2=pypi_0
+get-annotations=0.1.2=pypi_0
+h11=0.14.0=pypi_0
+h5py=3.10.0=pypi_0
+harmonypy=0.0.9=pypi_0
+httpcore=1.0.5=pypi_0
+httpx=0.27.0=pypi_0
+identify=2.5.36=pypi_0
+idna=3.6=pypi_0
+igraph=0.11.5=pypi_0
+imageio=2.34.1=pypi_0
+importlib-metadata=7.0.0=pypi_0
+importlib-resources=6.1.1=pypi_0
+interlap=0.2.7=pypi_0
+ipykernel=6.27.1=pypi_0
+ipython=8.12.3=pypi_0
+ipywidgets=8.1.1=pypi_0
+isoduration=20.11.0=pypi_0
+jaraco-classes=3.3.0=pypi_0
+jedi=0.19.1=pypi_0
+jeepney=0.8.0=pypi_0
+jinja2=3.1.2=pypi_0
+joblib=1.3.2=pypi_0
+json5=0.9.14=pypi_0
+jsonpointer=2.4=pypi_0
+jsonschema=4.20.0=pypi_0
+jsonschema-specifications=2023.11.2=pypi_0
+jupyter=1.0.0=pypi_0
+jupyter-client=8.6.0=pypi_0
+jupyter-console=6.6.3=pypi_0
+jupyter-core=5.5.0=pypi_0
+jupyter-events=0.9.0=pypi_0
+jupyter-lsp=2.2.1=pypi_0
+jupyter-server=2.12.1=pypi_0
+jupyter-server-terminals=0.5.0=pypi_0
+jupyterlab=4.0.9=pypi_0
+jupyterlab-pygments=0.3.0=pypi_0
+jupyterlab-server=2.25.2=pypi_0
+jupyterlab-widgets=3.0.9=pypi_0
+keyring=24.3.0=pypi_0
+kiwisolver=1.4.5=pypi_0
+lazy-loader=0.4=pypi_0
+ld_impl_linux-64=2.39=hc81fddc_0
+leidenalg=0.10.2=pypi_0
+liana=1.1.0=pypi_0
+libffi=3.4.2=h7f98852_5
+libgcc-ng=12.2.0=h65d4601_19
+libgomp=12.2.0=h65d4601_19
+libnsl=2.0.0=h7f98852_0
+libsqlite=3.40.0=h753d276_0
+libuuid=2.32.1=h7f98852_1000
+libzlib=1.2.13=h166bdaf_4
+llvmlite=0.41.1=pypi_0
+locket=1.0.0=pypi_0
+loompy=3.0.7=pypi_0
+louvain=0.8.2=pypi_0
+lz4=4.3.3=pypi_0
+markdown-it-py=3.0.0=pypi_0
+markupsafe=2.1.3=pypi_0
+matplotlib=3.7.4=pypi_0
+matplotlib-inline=0.1.6=pypi_0
+mdurl=0.1.2=pypi_0
+mistune=3.0.2=pypi_0
+mizani=0.9.3=pypi_0
+more-itertools=10.1.0=pypi_0
+mpmath=1.3.0=pypi_0
+msgpack=1.0.8=pypi_0
+mudata=0.2.3=pypi_0
+multidict=6.0.5=pypi_0
+multiprocessing-on-dill=3.5.0a4=pypi_0
+natsort=8.4.0=pypi_0
+nbclient=0.9.0=pypi_0
+nbconvert=7.12.0=pypi_0
+nbformat=5.9.2=pypi_0
+ncurses=6.3=h27087fc_1
+nest-asyncio=1.5.8=pypi_0
+networkx=3.1=pypi_0
+nh3=0.2.15=pypi_0
+nodeenv=1.8.0=pypi_0
+nose=1.3.7=pypi_0
+notebook=7.2.0=pypi_0
+notebook-shim=0.2.3=pypi_0
+numba=0.58.1=pypi_0
+numexpr=2.8.6=pypi_0
+numpy=1.23.4=pypi_0
+numpy-groupies=0.9.22=pypi_0
+nvidia-cublas-cu12=12.1.3.1=pypi_0
+nvidia-cuda-cupti-cu12=12.1.105=pypi_0
+nvidia-cuda-nvrtc-cu12=12.1.105=pypi_0
+nvidia-cuda-runtime-cu12=12.1.105=pypi_0
+nvidia-cudnn-cu12=8.9.2.26=pypi_0
+nvidia-cufft-cu12=11.0.2.54=pypi_0
+nvidia-curand-cu12=10.3.2.106=pypi_0
+nvidia-cusolver-cu12=11.4.5.107=pypi_0
+nvidia-cusparse-cu12=12.1.0.106=pypi_0
+nvidia-nccl-cu12=2.18.1=pypi_0
+nvidia-nvjitlink-cu12=12.4.127=pypi_0
+nvidia-nvtx-cu12=12.1.105=pypi_0
+openpyxl=3.1.2=pypi_0
+openssl=3.0.7=h166bdaf_0
+opt-einsum=3.3.0=pypi_0
+overrides=7.4.0=pypi_0
+packaging=23.2=pypi_0
+pandas=2.0.3=pypi_0
+pandocfilters=1.5.0=pypi_0
+parso=0.8.3=pypi_0
+partd=1.4.1=pypi_0
+patsy=0.5.4=pypi_0
+pexpect=4.9.0=pypi_0
+phenograph=1.5.7=pypi_0
+pickleshare=0.7.5=pypi_0
+pillow=10.1.0=pypi_0
+pip=22.3.1=pyhd8ed1ab_0
+pkginfo=1.9.6=pypi_0
+pkgutil-resolve-name=1.3.10=pypi_0
+platformdirs=4.1.0=pypi_0
+plotnine=0.12.4=pypi_0
+pre-commit=3.5.0=pypi_0
+prometheus-client=0.19.0=pypi_0
+prompt-toolkit=3.0.43=pypi_0
+psutil=5.9.6=pypi_0
+ptyprocess=0.7.0=pypi_0
+pure-eval=0.2.2=pypi_0
+pyarrow=16.1.0=pypi_0
+pycircstat=0.0.2=pypi_0
+pycparser=2.21=pypi_0
+pygments=2.17.2=pypi_0
+pynndescent=0.5.11=pypi_0
+pyparsing=3.1.1=pypi_0
+pyro-api=0.1.2=pypi_0
+pyro-ppl=1.8.6=pypi_0
+pyscenic=0.12.1=pypi_0
+python=3.8.13=ha86cf86_0_cpython
+python-dateutil=2.8.2=pypi_0
+python-json-logger=2.0.7=pypi_0
+pytz=2023.3.post1=pypi_0
+pywavelets=1.4.1=pypi_0
+pyyaml=6.0.1=pypi_0
+pyzmq=25.1.2=pypi_0
+qtconsole=5.5.2=pypi_0
+qtpy=2.4.1=pypi_0
+readline=8.1.2=h0f457ee_0
+readme-renderer=42.0=pypi_0
+referencing=0.32.0=pypi_0
+requests=2.31.0=pypi_0
+requests-toolbelt=1.0.0=pypi_0
+rfc3339-validator=0.1.4=pypi_0
+rfc3986=2.0.0=pypi_0
+rfc3986-validator=0.1.1=pypi_0
+rich=13.7.0=pypi_0
+rpds-py=0.13.2=pypi_0
+scanpy=1.9.6=pypi_0
+scikit-image=0.21.0=pypi_0
+scikit-learn=1.3.2=pypi_0
+scipy=1.10.1=pypi_0
+scvelo=0.3.2=pypi_0
+seaborn=0.12.2=pypi_0
+secretstorage=3.3.3=pypi_0
+send2trash=1.8.2=pypi_0
+session-info=1.0.0=pypi_0
+setuptools=65.5.1=pyhd8ed1ab_0
+six=1.16.0=pypi_0
+sniffio=1.3.0=pypi_0
+sortedcontainers=2.4.0=pypi_0
+soupsieve=2.5=pypi_0
+sqlite=3.40.0=h4ff8645_0
+stack-data=0.6.3=pypi_0
+statsmodels=0.14.0=pypi_0
+stdlib-list=0.10.0=pypi_0
+sympy=1.12=pypi_0
+tblib=3.0.0=pypi_0
+terminado=0.18.0=pypi_0
+texttable=1.7.0=pypi_0
+threadpoolctl=3.2.0=pypi_0
+tifffile=2023.7.10=pypi_0
+tinycss2=1.2.1=pypi_0
+tk=8.6.12=h27826a3_0
+tomli=2.0.1=pypi_0
+toolz=0.12.1=pypi_0
+torch=2.1.1=pypi_0
+tornado=6.4=pypi_0
+tqdm=4.66.1=pypi_0
+traitlets=5.14.0=pypi_0
+triton=2.1.0=pypi_0
+types-python-dateutil=2.8.19.14=pypi_0
+typing-extensions=4.9.0=pypi_0
+tzdata=2023.3=pypi_0
+umap-learn=0.5.5=pypi_0
+uri-template=1.3.0=pypi_0
+urllib3=2.1.0=pypi_0
+velocycle=0.1.0.5=pypi_0
+virtualenv=20.26.2=pypi_0
+wcwidth=0.2.12=pypi_0
+webcolors=1.13=pypi_0
+webencodings=0.5.1=pypi_0
+websocket-client=1.7.0=pypi_0
+wheel=0.38.4=pyhd8ed1ab_0
+widgetsnbextension=4.0.9=pypi_0
+xyzservices=2024.4.0=pypi_0
+xz=5.2.6=h166bdaf_0
+yarl=1.9.4=pypi_0
+zict=3.0.0=pypi_0
+zipp=3.17.0=pypi_0
